// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewDigitalTemplate Digital proofing when digitalProofingEmail is enabled matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="notify-confirmation-panel nhsuk-heading-l"
  >
    Template saved
  </div>
  Preview
  <div
    class="nhsuk-summary-list test-message-banner"
  >
    <div
      class="nhs_notify_warning_callout nhsuk-u-padding-4 nhsuk-u-margin-bottom-6 nhsuk-u-reading-width test-message-banner__callout"
      data-testid="test-message-banner"
    >
      This is only a basic preview. 
      <a
        href="/templates/send-test-email/template-456"
        rel="noopener noreferrer"
        target="_blank"
      >
        Send a test email
      </a>
       to preview this message properly.
    </div>
  </div>
  <a
    aria-disabled="false"
    class="nhsuk-button nhsuk-button--secondary"
    data-testid="edit-template-button"
    draggable="false"
    href="/edit-email-template/template-456"
    role="button"
  >
    Edit template
  </a>
  <a
    aria-disabled="false"
    class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-left-3"
    data-testid="send-test-message-button"
    draggable="false"
    href="/send-test-email/template-456"
    role="button"
  >
    Send a test message
  </a>
</DocumentFragment>
`;

exports[`PreviewDigitalTemplate Digital proofing when digitalProofingNhsApp is enabled matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="notify-confirmation-panel nhsuk-heading-l"
  >
    Template saved
  </div>
  Preview
  <div
    class="nhsuk-summary-list test-message-banner"
  >
    <div
      class="nhs_notify_warning_callout nhsuk-u-padding-4 nhsuk-u-margin-bottom-6 nhsuk-u-reading-width test-message-banner__callout"
      data-testid="test-message-banner"
    >
      This is only a basic preview. 
      <a
        href="/templates/send-test-nhs-app-message/template-123"
        rel="noopener noreferrer"
        target="_blank"
      >
        Send a test NHS App message
      </a>
       to preview this message properly.
    </div>
  </div>
  <a
    aria-disabled="false"
    class="nhsuk-button nhsuk-button--secondary"
    data-testid="edit-template-button"
    draggable="false"
    href="/edit-nhs-app-template/template-123"
    role="button"
  >
    Edit template
  </a>
  <a
    aria-disabled="false"
    class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-left-3"
    data-testid="send-test-message-button"
    draggable="false"
    href="/send-test-nhs-app-message/template-123"
    role="button"
  >
    Send a test message
  </a>
</DocumentFragment>
`;

exports[`PreviewDigitalTemplate Digital proofing when digitalProofingSms is enabled matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="notify-confirmation-panel nhsuk-heading-l"
  >
    Template saved
  </div>
  Preview
  <div
    class="nhsuk-summary-list test-message-banner"
  >
    <div
      class="nhs_notify_warning_callout nhsuk-u-padding-4 nhsuk-u-margin-bottom-6 nhsuk-u-reading-width test-message-banner__callout"
      data-testid="test-message-banner"
    >
      This is only a basic preview. 
      <a
        href="/templates/send-test-text-message/template-789"
        rel="noopener noreferrer"
        target="_blank"
      >
        Send a test text message
      </a>
       to preview this message properly.
    </div>
  </div>
  <a
    aria-disabled="false"
    class="nhsuk-button nhsuk-button--secondary"
    data-testid="edit-template-button"
    draggable="false"
    href="/edit-sms-template/template-789"
    role="button"
  >
    Edit template
  </a>
  <a
    aria-disabled="false"
    class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-left-3"
    data-testid="send-test-message-button"
    draggable="false"
    href="/send-test-text-message/template-789"
    role="button"
  >
    Send a test message
  </a>
</DocumentFragment>
`;

exports[`PreviewDigitalTemplate Routing disabled matches error snapshot 1`] = `
<DocumentFragment>
  <div
    class="notify-confirmation-panel nhsuk-heading-l"
  >
    Template saved
  </div>
  <div
    aria-labelledby="error-summary-title"
    class="nhsuk-error-summary"
    role="alert"
    tabindex="-1"
  >
    <h2
      class="nhsuk-error-summary__title"
      data-testid="error-summary"
      id="error-summary-title"
    >
      There is a problem
    </h2>
    <ul
      class="nhsuk-list nhsuk-error-summary__list"
    >
      <li>
        <a
          href="#exampleError"
        >
          Example error
        </a>
      </li>
    </ul>
  </div>
  Preview
  <form
    action=""
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="preview-form"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
          data-testid="preview-example-form__legend"
        >
          Example heading
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-radios"
            id="preview-example"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="test-edit-radio"
                id="preview-example-test-edit"
                name="preview-example"
                type="radio"
                value="test-edit"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="preview-example-test-edit"
                id="preview-example-test-edit--label"
              >
                Edit template
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="test-submit-radio"
                id="preview-example-test-submit"
                name="preview-example"
                type="radio"
                value="test-submit"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="preview-example-test-submit"
                id="preview-example-test-submit--label"
              >
                Submit template
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="preview-form-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`PreviewDigitalTemplate Routing disabled matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="notify-confirmation-panel nhsuk-heading-l"
  >
    Template saved
  </div>
  Preview
  <form
    action=""
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="preview-form"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
          data-testid="preview-example-form__legend"
        >
          Example heading
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-radios"
            id="preview-example"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="test-edit-radio"
                id="preview-example-test-edit"
                name="preview-example"
                type="radio"
                value="test-edit"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="preview-example-test-edit"
                id="preview-example-test-edit--label"
              >
                Edit template
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="test-submit-radio"
                id="preview-example-test-submit"
                name="preview-example"
                type="radio"
                value="test-submit"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="preview-example-test-submit"
                id="preview-example-test-submit--label"
              >
                Submit template
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="preview-form-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`PreviewDigitalTemplate Routing enabled matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="notify-confirmation-panel nhsuk-heading-l"
  >
    Template saved
  </div>
  Preview
  <a
    aria-disabled="false"
    class="nhsuk-button nhsuk-button--secondary"
    data-testid="edit-template-button"
    draggable="false"
    href="/edit-nhs-app-template/app-template-id"
    role="button"
  >
    Edit template
  </a>
</DocumentFragment>
`;
